# nomnom

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
doc/: readme.md
src/: main.cpp
